<resources>
    <string name="app_name">MyMiu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="not_login">未登录</string>
    <string name="users">个人中心</string>
    <string name="download">下载管理</string>
    <string name="favorite">我的收藏</string>
    <string name="setting">设置</string>
    <string name="message">消息中心</string>
     <string name="lorem_1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero.
    </string>
    <string name="lorem_2">
        Phasellus congue tincidunt lectus, at dignissim ligula maximus eu.
        Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere.
    </string>
    <string name="lorem_3">
        Sed pellentesque placerat quam, ut ultricies turpis feugiat a.
        Aliquam a volutpat risus.
    </string>
    <string name="main_grid_music">
        本地音乐
    </string>
    <string name="main_grid_download">
        下载管理
    </string>
    <string name="main_grid_mv">
        我的MV
    </string>
    <string name="main_grid_like">
        我的收藏
    </string>
    <string name="mymusic">
        我的音乐
    </string>
    <string name="my_music_tab_local">
        歌曲
    </string>
      <string name="my_music_tab_singer">
        歌手
    </string>
      <string name="my_music_tab_special">
        专辑
    </string>
    <string name="my_music_tab_folder">
        文件夹
    </string>
    <string name="my">
        我的
    </string>
    <string name="friend">
        乐友
    </string>
    <string name="found">发现</string>
    <string name="search_local">搜索本地音乐</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
